# tax_management

./: .gitignore  App.tsx  DEPLOY_STEPS_RENDER.txt  Dashboard.tsx  FileUpload.tsx  README.md  create-prompt.prompt.md  create_backend_venv.ps1  render.yaml  start.bat  start.sh
.github/workflows/: deploy-backend-render.yml  deploy-frontend-pages.yml
backend/: .env  dev.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: __init__.py  account_subjects.py  auth.py  classification_rules.py  customers.py  export.py  files.py  ocr_results.py  system.py  users.py
backend/app/core/: config.py  db.py  dependencies.py  security.py
backend/app/models/: __init__.py  account_subject.py  audit_log.py  classification_rule.py  customer.py  export_log.py  export_template.py  file.py  ocr_result.py  ocr_task.py  user.py
backend/app/schemas/: __init__.py  auth.py  customer.py  file.py  ocr_result.py
backend/app/services/: __init__.py  cleanup_batch.py  ocr_batch.py  scheduler.py
backend/scripts/: README.md  init_database.py  init_db.bat  init_db.sh  init_db.sql  seed_data.sql
backend/uploads/1/: UI-prototype-prompt111.txt
docs/: prototype-gpt-5.4ー0329-basicdesign copy 2.md  prototype-gpt-5.4ー0329-detaildesign.md  prototype-gpt-5.4ー0329.html
frontend/: .eslintrc.cjs  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1775056888225-7b5c38357dc9a.mjs
frontend/__mocks__/: lightboxMock.js
frontend/src/: App.test.tsx  App.tsx  (+2 more)
(+24 files in other folders)
