[project]
name = "auto-bookkeeping"
version = "0.1.0"
description = "税理士向け自動記帳サービスのバックエンド"
authors = ["Auto Bookkeeping Team <team@example.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.23.0"
sqlmodel = "^0.0.8"
python-multipart = "^0.0.6"
python-jose[cryptography] = "^3.4.0"
passlib[bcrypt] = "^1.7.5"
psycopg[binary] = "^3.4.0"
python-dotenv = "^1.1.1"

[project.scripts]
start = "uvicorn app.main:app --reload"
